--- a/search.html
+++ b/search.html
@@ -17,28 +17,28 @@
             <div>
                 <div>
                     <nav class="navbar navbar-light navbar-expand bg-white py-3">
-                        <div class="container"><a class="navbar-brand" href="#">POE</a>
+                        <div class="container"><a class="navbar-brand" href="#!">POE</a>
                             <div class="collapse navbar-collapse d-flex align-items-center" id="navcol-1">
                                 <div class="d-flex align-items-center w-100">
                                     <div class="row justify-content-between align-items-center flex-nowrap w-100">
                                         <div class="col">
                                             <ul class="navbar-nav text-uppercase flex-wrap">
-                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla odbiorców</a>
-                                                    <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#!">Dla odbiorców</a>
+                                                    <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
-                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla dostawców energii</a>
-                                                    <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#!">Dla dostawców energii</a>
+                                                    <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
-                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#">Regulamin</a></li>
-                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#">O MKiŚ</a></li>
-                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#">Kontakt</a></li>
+                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Regulamin</a></li>
+                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#!">O MKiŚ</a></li>
+                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Kontakt</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-auto">
                                             <div class="row align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="dropdown"><a class="dropdown-toggle fw-bold link-dark" aria-expanded="false" data-bs-toggle="dropdown" href="#">PL&nbsp;</a>
-                                                        <div class="dropdown-menu"><a class="dropdown-item d-flex justify-content-between align-items-center active" href="#"><span class="fw-bold">Polski</span><span class="badge bg-primary text-white border-primary rounded-pill border">PL</span></a><a class="dropdown-item d-flex justify-content-between align-items-center" href="#"><span>English</span><span class="badge bg-light text-black-50 rounded-pill border">EN</span></a><a class="dropdown-item d-flex justify-content-between align-items-center" href="#"><span>Deutsch</span><span class="badge bg-light text-black-50 rounded-pill border">DE</span></a></div>
+                                                    <div class="dropdown"><a class="dropdown-toggle fw-bold link-dark" aria-expanded="false" data-bs-toggle="dropdown" href="#!">PL&nbsp;</a>
+                                                        <div class="dropdown-menu"><a class="dropdown-item d-flex justify-content-between align-items-center active" href="#!"><span class="fw-bold">Polski</span><span class="badge bg-primary text-white border-primary rounded-pill border">PL</span></a><a class="dropdown-item d-flex justify-content-between align-items-center" href="#!"><span>English</span><span class="badge bg-light text-black-50 rounded-pill border">EN</span></a><a class="dropdown-item d-flex justify-content-between align-items-center" href="#!"><span>Deutsch</span><span class="badge bg-light text-black-50 rounded-pill border">DE</span></a></div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
@@ -60,9 +60,9 @@
             <div class="bg-light pt-4 mb-4 border-bottom">
                 <div class="container">
                     <ul class="nav nav-tabs justify-content-center">
-                        <li class="nav-item"><a class="nav-link active" href="#">Wyszukiwarka</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Jak zmienić dostawcę</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Baza wiedzy</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#!">Wyszukiwarka</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Jak zmienić dostawcę</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Baza wiedzy</a></li>
                     </ul>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                             </div>
                             <div class="col-auto">
                                 <ul class="nav nav-tabs">
-                                    <li class="nav-item"><a class="nav-link px-3" href="#"><span class="text-body d-flex align-items-center mx-n1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-plus-lg mx-1">
+                                    <li class="nav-item"><a class="nav-link px-3" href="#!"><span class="text-body d-flex align-items-center mx-n1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-plus-lg mx-1">
                                                     <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"></path>
                                                 </svg><span class="mx-1">Kalkulator</span><span class="badge bg-dark mx-1 px-2 rounded-pill">1</span></span></a></li>
                                 </ul>
@@ -87,8 +87,8 @@
             <div class="mb-4 border-bottom">
                 <div class="container">
                     <ul class="nav nav-tabs">
-                        <li class="nav-item"><a class="nav-link active" href="#">Gospodarstwo domowe</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Przedsiębiorca</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#!">Gospodarstwo domowe</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Przedsiębiorca</a></li>
                     </ul>
                 </div>
             </div>
@@ -407,16 +407,16 @@
                                     <div class="col-auto">
                                         <nav>
                                             <ul class="pagination mb-0">
-                                                <li class="page-item"><a class="page-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-bar-left fs-5">
+                                                <li class="page-item"><a class="page-link" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-bar-left fs-5">
                                                             <path fill-rule="evenodd" d="M11.854 3.646a.5.5 0 0 1 0 .708L8.207 8l3.647 3.646a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 0 1 .708 0zM4.5 1a.5.5 0 0 0-.5.5v13a.5.5 0 0 0 1 0v-13a.5.5 0 0 0-.5-.5z"></path>
                                                         </svg></a></li>
-                                                <li class="page-item"><a class="page-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-left fs-5">
+                                                <li class="page-item"><a class="page-link" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-left fs-5">
                                                             <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
                                                         </svg></a></li>
-                                                <li class="page-item"><a class="page-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-right fs-5">
+                                                <li class="page-item"><a class="page-link" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-right fs-5">
                                                             <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
                                                         </svg></a></li>
-                                                <li class="page-item"><a class="page-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-bar-right fs-5">
+                                                <li class="page-item"><a class="page-link" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-bar-right fs-5">
                                                             <path fill-rule="evenodd" d="M4.146 3.646a.5.5 0 0 0 0 .708L7.793 8l-3.647 3.646a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708 0zM11.5 1a.5.5 0 0 1 .5.5v13a.5.5 0 0 1-1 0v-13a.5.5 0 0 1 .5-.5z"></path>
                                                         </svg></a></li>
                                             </ul>
