--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div>
                 <div>
                     <nav class="navbar navbar-light navbar-expand bg-white py-3">
-                        <div class="container"><a class="navbar-brand" href="#!">POE</a>
+                        <div class="container"><a class="navbar-brand" href="index.html">POE</a>
                             <div class="collapse navbar-collapse d-flex align-items-center" id="navcol-1">
                                 <div class="d-flex align-items-center w-100">
                                     <div class="row justify-content-between align-items-center flex-nowrap w-100">
