--- a/search.html
+++ b/search.html
@@ -23,10 +23,10 @@
                                     <div class="row justify-content-between align-items-center flex-nowrap w-100">
                                         <div class="col">
                                             <ul class="navbar-nav text-uppercase flex-wrap">
-                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#!">Dla odbiorców</a>
+                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla odbiorców</a>
                                                     <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
-                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#!">Dla dostawców energii</a>
+                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla dostawców energii</a>
                                                     <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
                                                 <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Regulamin</a></li>
@@ -37,7 +37,7 @@
                                         <div class="col-auto">
                                             <div class="row align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="dropdown"><a class="dropdown-toggle fw-bold link-dark" aria-expanded="false" data-bs-toggle="dropdown" href="#!">PL&nbsp;</a>
+                                                    <div class="dropdown"><a class="dropdown-toggle fw-bold link-dark" aria-expanded="false" data-bs-toggle="dropdown" href="#">PL&nbsp;</a>
                                                         <div class="dropdown-menu"><a class="dropdown-item d-flex justify-content-between align-items-center active" href="#!"><span class="fw-bold">Polski</span><span class="badge bg-primary text-white border-primary rounded-pill border">PL</span></a><a class="dropdown-item d-flex justify-content-between align-items-center" href="#!"><span>English</span><span class="badge bg-light text-black-50 rounded-pill border">EN</span></a><a class="dropdown-item d-flex justify-content-between align-items-center" href="#!"><span>Deutsch</span><span class="badge bg-light text-black-50 rounded-pill border">DE</span></a></div>
                                                     </div>
                                                 </div>
