--- a/search.html
+++ b/search.html
@@ -72,11 +72,15 @@
                     <div class="border py-1 px-3">
                         <div class="row justify-content-between align-items-center">
                             <div class="col-auto">
-                                <form class="d-flex align-items-center"><input class="form-control form-control-lg text-center" type="text" value="91-492" style="width: 110px;"><label class="form-label fw-bold mb-0 ms-3">Łódź</label></form>
+                                <div class="row align-items-center">
+                                    <div class="col-auto">
+                                        <form class="d-flex align-items-center"><input class="form-control form-control-lg text-center" type="text" value="91-492" style="width: 110px;"><label class="form-label fw-bold mb-0 ms-3">Łódź</label></form>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-auto">
                                 <ul class="nav nav-tabs">
-                                    <li class="nav-item"><a class="nav-link px-3" href="#!"><span class="text-body d-flex align-items-center mx-n1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-plus-lg mx-1">
+                                    <li class="nav-item"><a class="nav-link px-3" href="compare.html"><span class="text-body d-flex align-items-center mx-n1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-plus-lg mx-1">
                                                     <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"></path>
                                                 </svg><span class="mx-1">Kalkulator</span><span class="badge bg-dark mx-1 px-2 rounded-pill">1</span></span></a></li>
                                 </ul>
@@ -103,22 +107,22 @@
                             <div class="col-auto">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="dropdown"><button class="btn btn-outline-primary dropdown-toggle fw-normal border-1 border-silver" aria-expanded="false" data-bs-toggle="dropdown" type="button">Taryfa</button>
+                                        <div class="dropdown"><button class="btn dropdown-toggle fw-normal border-1 btn-outline-silver text-primary" aria-expanded="false" data-bs-toggle="dropdown" type="button">Taryfa</button>
                                             <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="dropdown"><button class="btn btn-outline-primary dropdown-toggle fw-normal border-1 border-silver" aria-expanded="false" data-bs-toggle="dropdown" type="button">Ceny brutto</button>
+                                        <div class="dropdown"><button class="btn dropdown-toggle fw-normal border-1 btn-outline-silver text-primary" aria-expanded="false" data-bs-toggle="dropdown" type="button">Ceny brutto</button>
                                             <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="dropdown"><button class="btn btn-outline-primary dropdown-toggle fw-normal border-1 border-silver" aria-expanded="false" data-bs-toggle="dropdown" type="button">Okres</button>
+                                        <div class="dropdown"><button class="btn dropdown-toggle fw-normal border-1 btn-outline-silver text-primary" aria-expanded="false" data-bs-toggle="dropdown" type="button">Okres</button>
                                             <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="dropdown"><button class="btn btn-outline-primary dropdown-toggle fw-normal border-1 border-silver" aria-expanded="false" data-bs-toggle="dropdown" type="button">Operator systemu (OSD)</button>
+                                        <div class="dropdown"><button class="btn dropdown-toggle fw-normal border-1 btn-outline-silver text-primary" aria-expanded="false" data-bs-toggle="dropdown" type="button">Operator systemu (OSD)</button>
                                             <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
                                         </div>
                                     </div>
@@ -237,9 +241,9 @@
                                             </div>
                                             <div class="card-footer">
                                                 <div class="row justify-content-between align-items-center">
-                                                    <div class="col-auto"><span class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-up me-2">
+                                                    <div class="col-auto"><button class="btn btn-outline-primary border-1 d-flex align-items-center" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-up me-2">
                                                                 <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
-                                                            </svg><span>Zwiń</span></span></div>
+                                                            </svg><span>Zwiń</span></button></div>
                                                     <div class="col-auto"><button class="btn btn-primary" type="button">Zobacz szczegóły</button></div>
                                                 </div>
                                             </div>
