--- a/_components.html
+++ b/_components.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
     <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
+    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=db8b09bd32e5f4d36c343d4e42fffe67">
 </head>
 
 <body class="py-5"><div class="container">
