--- a/compare.html
+++ b/compare.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
     <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
+    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=db8b09bd32e5f4d36c343d4e42fffe67">
 </head>
 
 <body>
@@ -78,9 +79,7 @@
                                     <div class="col-auto"><a class="btn btn-light border-1 shadow-none d-flex align-items-center" role="button" href="search.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-left me-2 ms-n1">
                                                 <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
                                             </svg><span>Wróć</span></a></div>
-                                    <div class="col-auto">
-                                        <form class="d-flex align-items-center"><input class="form-control form-control-lg text-center" type="text" value="91-492" style="width: 110px;"><label class="form-label fw-bold mb-0 ms-3">Łódź</label></form>
-                                    </div>
+                                    <div class="col-auto d-flex align-items-center"><input class="form-control-lg form-control text-center" type="text" value="91-492" style="width: 110px;"><label class="form-label fw-bold mb-0 ms-3">Łódź</label></div>
                                 </div>
                             </div>
                             <div class="col-auto">
