--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
     <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
+    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=db8b09bd32e5f4d36c343d4e42fffe67">
 </head>
 
 <body>
@@ -66,23 +67,21 @@
                         <h1>Wybierz najlepszą ofertę</h1>
                         <div class="row">
                             <div class="col-4">
-                                <form>
-                                    <div class="row gy-3 row-cols-1">
-                                        <div class="col-auto">
-                                            <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-1" name="osd"><label class="form-check-label" for="formCheck-1">Gospodarstwo domowe</label></div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-2" name="osd"><label class="form-check-label" for="formCheck-2">Przedsiębiorca</label></div>
-                                        </div>
-                                        <div class="col"><input class="bg-white form-control form-control-lg w-auto border-0 bg-opacity-25 text-white text-center rounded-0 py-2" type="text" value="Wpisz kod pocztowy"></div>
-                                        <div class="col">
-                                            <div class="btn-group btn-group-lg shadow-none m-n2" role="group"><button class="btn btn-white rounded-0 m-2" type="button">Szukaj</button><button class="btn btn-outline-white rounded-0 m-2" type="button">Dowiedz się więcej</button></div>
-                                        </div>
-                                        <div class="col">
-                                            <p class="mb-0 small">na podstawie kodu pocztowego system informatyczny przypisze Tobie właściwego Operatora Systemu Dystrybucyjnego (OSD) dzięki temu, porównanie cen prądu będzie bardzo dokładne.</p>
-                                        </div>
+                                <div class="row gy-3 row-cols-1">
+                                    <div class="col-auto">
+                                        <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-1" name="osd"><label class="form-check-label" for="formCheck-1">Gospodarstwo domowe</label></div>
                                     </div>
-                                </form>
+                                    <div class="col-auto">
+                                        <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-2" name="osd"><label class="form-check-label" for="formCheck-2">Przedsiębiorca</label></div>
+                                    </div>
+                                    <div class="col"><input class="form-control-lg form-control w-auto border-0 text-center rounded-0 py-2 bg-black bg-opacity-75 text-white" type="text" placeholder="Wpisz kod pocztowy"></div>
+                                    <div class="col">
+                                        <div class="btn-group btn-group-lg shadow-none m-n2" role="group"><button class="btn btn-white rounded-0 m-2" type="button">Szukaj</button><button class="btn btn-outline-white rounded-0 m-2" type="button">Dowiedz się więcej</button></div>
+                                    </div>
+                                    <div class="col">
+                                        <p class="mb-0 small">na podstawie kodu pocztowego system informatyczny przypisze Tobie właściwego Operatora Systemu Dystrybucyjnego (OSD) dzięki temu, porównanie cen prądu będzie bardzo dokładne.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
