--- a/auth-confirm.html
+++ b/auth-confirm.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
     <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
+    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=db8b09bd32e5f4d36c343d4e42fffe67">
 </head>
 
 <body>
@@ -24,18 +25,16 @@
                                 <div class="col-6">
                                     <h2 class="text-uppercase text-center mb-4 h3">Potwierdź rejestrację</h2>
                                     <p class="text-center">Podaj 6-cyfr z wiadomości, którą otrzymałeś na<br>jan.kowalski@pge.pl</p>
-                                    <form>
-                                        <div class="row gy-4 row-cols-1 justify-content-between align-items-center">
-                                            <div class="col">
-                                                <div class="input-group input-group-lg"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"></div>
-                                            </div>
-                                            <div class="col-sm-auto"><button class="btn btn-info btn-lg shadow-none w-100" type="button">Wyczyść</button></div>
-                                            <div class="col-sm-auto"><button class="btn btn-primary btn-lg w-100" type="button">Dalej</button></div>
-                                            <div class="col">
-                                                <p class="d-flex justify-content-center mx-n1 mb-0"><span class="text-end mx-1">Nie otrzymałeś wiadomości?</span><a class="mx-1" href="#!">Prześlij kod jeszcze raz</a></p>
-                                            </div>
+                                    <div class="row gy-4 row-cols-1 justify-content-between align-items-center">
+                                        <div class="col">
+                                            <div class="input-group input-group-lg"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"><input class="form-control" type="text"></div>
                                         </div>
-                                    </form>
+                                        <div class="col-sm-auto"><button class="btn btn-info btn-lg shadow-none w-100" type="button">Wyczyść</button></div>
+                                        <div class="col-sm-auto"><button class="btn btn-primary btn-lg w-100" type="button">Dalej</button></div>
+                                        <div class="col">
+                                            <p class="d-flex justify-content-center mx-n1 mb-0"><span class="text-end mx-1">Nie otrzymałeś wiadomości?</span><a class="mx-1" href="#!">Prześlij kod jeszcze raz</a></p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
