--- a/auth-remind.html
+++ b/auth-remind.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
     <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
+    <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=db8b09bd32e5f4d36c343d4e42fffe67">
 </head>
 
 <body>
@@ -23,15 +24,13 @@
                             <div class="row justify-content-center">
                                 <div class="col-4">
                                     <h2 class="text-uppercase text-center mb-4 h3">Przypomnij hasło</h2>
-                                    <form>
-                                        <div class="row gy-4 row-cols-1 justify-content-between align-items-center">
-                                            <div class="col"><label class="form-label">E-mail</label><input class="form-control form-control-lg" type="email" placeholder="Podaj e-mail"></div>
-                                            <div class="col"><button class="btn btn-primary btn-lg w-100" type="button">Wyślij</button></div>
-                                            <div class="col">
-                                                <p class="d-flex justify-content-center mx-n1 mb-0"><span class="mx-1">Nie chcesz resetować hasła?</span><a class="mx-1" href="auth-login.html">Wróć do logowania</a></p>
-                                            </div>
+                                    <div class="row gy-4 row-cols-1 justify-content-between align-items-center">
+                                        <div class="col"><label class="form-label">E-mail</label><input class="form-control-lg form-control" type="email" placeholder="Podaj e-mail"></div>
+                                        <div class="col"><button class="btn btn-primary btn-lg w-100" type="button">Wyślij</button></div>
+                                        <div class="col">
+                                            <p class="d-flex justify-content-center mx-n1 mb-0"><span class="mx-1">Nie chcesz resetować hasła?</span><a class="mx-1" href="auth-login.html">Wróć do logowania</a></p>
                                         </div>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
