--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                                     <div class="row justify-content-between align-items-center flex-nowrap w-100">
                                         <div class="col">
                                             <ul class="navbar-nav text-uppercase flex-wrap">
-                                                <li class="nav-item"><a class="nav-link text-nowrap" href="search.html">Porównaj ceny</a></li>
                                                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla odbiorców</a>
                                                     <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
@@ -76,7 +75,7 @@
                                     </div>
                                     <div class="col"><input class="form-control-lg form-control w-auto border-0 text-center rounded-0 py-2 bg-black bg-opacity-75 text-white" type="text" placeholder="Wpisz kod pocztowy"></div>
                                     <div class="col">
-                                        <div class="btn-group btn-group-lg shadow-none m-n2" role="group"><button class="btn btn-white rounded-0 m-2" type="button">Szukaj</button><button class="btn btn-outline-white rounded-0 m-2" type="button">Dowiedz się więcej</button></div>
+                                        <div class="btn-group btn-group-lg shadow-none m-n2" role="group"><a class="btn btn-white rounded-0 m-2" role="button" href="search.html">Szukaj</a><button class="btn btn-outline-white rounded-0 m-2" type="button">Dowiedz się więcej</button></div>
                                     </div>
                                     <div class="col">
                                         <p class="mb-0 small">na podstawie kodu pocztowego system informatyczny przypisze Tobie właściwego Operatora Systemu Dystrybucyjnego (OSD) dzięki temu, porównanie cen prądu będzie bardzo dokładne.</p>
