--- a/search.html
+++ b/search.html
@@ -307,11 +307,11 @@
                                                         <h3 class="fs-6 fw-normal text-black-50"><small>Nazwa</small></h3>
                                                         <p>PGE</p>
                                                         <h3 class="fs-6 fw-normal text-black-50"><small>Adres</small></h3>
-                                                        <p>ul. Bema 16, 91-492 Łódź</p>
+                                                        <p>Al. Jerozolimskie 100, 00-123 Warszawa</p>
                                                         <h3 class="fs-6 fw-normal text-black-50"><small>Kontakt</small></h3>
-                                                        <p>578 898 309</p>
+                                                        <p>987 654 321</p>
                                                         <h3 class="fs-6 fw-normal text-black-50"><small>E-mail</small></h3>
-                                                        <p>biuro@kdmc.pl</p>
+                                                        <p>pge@pge.pl</p>
                                                         <h3 class="fs-6 fw-normal text-black-50"><small>KRS</small></h3>
                                                         <p>EUR</p>
                                                         <h3 class="fs-6 fw-normal text-black-50"><small>Grupy taryfowe</small></h3>
