--- a/compare.html
+++ b/compare.html
@@ -177,7 +177,7 @@
                                             <h6 class="fw-normal text-muted card-subtitle mb-3">Energia elektryczna dla Odbiorców <br>indywidualnych&nbsp;Taryfy fioletowej</h6>
                                             <div class="row justify-content-between">
                                                 <div class="col-auto">
-                                                    <p class="mb-0">Oszczędność</p>
+                                                    <p class="mb-0">Różnica</p>
                                                 </div>
                                                 <div class="col-auto">
                                                     <p class="mb-0">0</p>
