--- a/compare.html
+++ b/compare.html
@@ -29,11 +29,10 @@
                                                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla odbiorców</a>
                                                     <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
-                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla dostawców energii</a>
+                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla sprzedawców energii</a>
                                                     <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
                                                 <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Regulamin</a></li>
-                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#!">O MKiŚ</a></li>
                                                 <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Kontakt</a></li>
                                             </ul>
                                         </div>
