--- a/search.html
+++ b/search.html
@@ -29,11 +29,10 @@
                                                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla odbiorców</a>
                                                     <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
-                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla dostawców energii</a>
+                                                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link text-nowrap" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dla sprzedawców energii</a>
                                                     <div class="dropdown-menu"><a class="dropdown-item" href="#!">First Item</a><a class="dropdown-item" href="#!">Second Item</a><a class="dropdown-item" href="#!">Third Item</a></div>
                                                 </li>
                                                 <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Regulamin</a></li>
-                                                <li class="nav-item"><a class="nav-link text-nowrap" href="#!">O MKiŚ</a></li>
                                                 <li class="nav-item"><a class="nav-link text-nowrap" href="#!">Kontakt</a></li>
                                             </ul>
                                         </div>
@@ -71,30 +70,30 @@
             </div>
             <div class="mb-3">
                 <div class="container">
-                    <div class="border py-1 px-3">
+                    <div class="border py-3 px-3">
                         <div class="row justify-content-between align-items-center flex-nowrap">
                             <div class="col">
-                                <div class="row gy-3 align-items-center flex-wrap">
-                                    <div class="col-auto d-flex align-items-center"><input class="form-control-lg form-control text-center" type="text" value="91-492" style="width: 110px;"><label class="form-label fw-bold mb-0 ms-3">Łódź</label></div>
-                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">OSD</label><select class="form-select">
+                                <div class="row gy-3 flex-wrap">
+                                    <div class="col-auto d-flex align-items-center"><input type="text" class="form-control text-center h-100 py-2" value="91-492" style="width: 90px;"><label class="form-label fw-bold mb-0 ms-3">Łódź</label></div>
+                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">OSD</label><select class="form-select h-100 py-2" style="width: 88.188px;">
                                             <option value="">PGE</option>
                                             <option value="">Inny operator 1</option>
                                             <option value="">Inny operator 2</option>
                                             <option value="">Inny operator 3</option>
                                         </select></div>
-                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Zużycie miesięczne (kWh)</label><input type="number" class="form-control text-center" value="1200" style="width: 110px;"></div>
-                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Cykl</label><select class="form-select">
+                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Zużycie miesięczne (kWh)</label><input type="number" class="form-control text-center h-100 py-2" value="1200" style="width: 90px;"></div>
+                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Cykl</label><select class="form-select py-2" style="width: 150.297px;">
                                             <option value="">Równomierny</option>
                                             <optgroup label="Zróżnicowany">
                                                 <option value="">Zróżnicowany łatwy</option>
                                                 <option value="">Zróżnicowany średni</option>
                                                 <option value="">Zróżnicowany trudny</option>
                                             </optgroup>
-                                        </select><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-info-circle fs-3 ms-3">
+                                        </select><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-info-circle fs-5 ms-2">
                                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
                                             <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
                                         </svg></div>
-                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Moc umowna kW</label><input type="number" class="form-control text-center" value="5.5" style="width: 110px;"></div>
+                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Moc umowna kW</label><input type="number" class="form-control text-center h-100 py-2" value="5.5" style="width: 110px;"></div>
                                 </div>
                             </div>
                             <div class="col-auto">
@@ -112,7 +111,7 @@
                 <div class="container">
                     <ul class="nav nav-tabs">
                         <li class="nav-item"><a class="nav-link active" href="#!">Gospodarstwo domowe</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Przedsiębiorca</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Mikroprzedsiębiorstwo</a></li>
                     </ul>
                 </div>
             </div>
@@ -125,7 +124,7 @@
                             </div>
                             <div class="col-auto">
                                 <div class="row">
-                                    <div class="col">
+                                    <div class="col d-flex">
                                         <div class="dropdown"><button class="btn dropdown-toggle fw-normal border-1 btn-outline-silver text-primary" aria-expanded="false" data-bs-toggle="dropdown" type="button"><span class="mx-n1"><span class="mx-1">Taryfy</span><span class="badge bg-primary rounded-pill mx-1 bg-lightblue text-primary">G11</span><span class="badge bg-primary rounded-pill mx-1 bg-lightblue text-primary">G12</span><span class="badge bg-primary rounded-pill mx-1 bg-lightblue text-primary">G12w</span></span></button>
                                             <div class="dropdown-menu"><a class="dropdown-item" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg me-2">
                                                         <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
@@ -136,16 +135,19 @@
                                                     </svg><span>G12w</span></a></div>
                                         </div>
                                     </div>
-                                    <div class="col">
+                                    <div class="col d-flex">
                                         <div class="dropdown"><button class="btn dropdown-toggle fw-normal border-1 btn-outline-silver text-primary" aria-expanded="false" data-bs-toggle="dropdown" type="button"><span class="mx-n1"><span class="mx-1">Ceny</span><span class="badge bg-primary rounded-pill mx-1 bg-lightblue text-primary">Brutto</span></span></button>
                                             <div class="dropdown-menu"><a class="dropdown-item" href="#">Netto</a><a class="dropdown-item" href="#">Brutto</a></div>
                                         </div>
                                     </div>
-                                    <div class="col">
+                                    <div class="col d-flex">
                                         <div class="dropdown"><button class="btn dropdown-toggle fw-normal border-1 btn-outline-silver text-primary" aria-expanded="false" data-bs-toggle="dropdown" type="button"><span class="mx-n1"><span class="mx-1">Okres</span><span class="badge bg-primary rounded-pill mx-1 bg-lightblue text-primary">Dwumiesięczny</span></span></button>
                                             <div class="dropdown-menu"><a class="dropdown-item" href="#">Miesięczny</a><a class="dropdown-item" href="#">Dwumiesięczny</a><a class="dropdown-item" href="#">Roczny</a></div>
                                         </div>
                                     </div>
+                                    <div class="col d-flex"><button class="btn btn-primary btn-sm d-flex align-items-center" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-filter me-2 ms-n1">
+                                                <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"></path>
+                                            </svg><span>zaawansowane</span></button></div>
                                 </div>
                             </div>
                         </div>
