--- a/ux/components-tooltips.html
+++ b/ux/components-tooltips.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>MDB</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=latin-ext&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=81582bdb254a94e4464424087c6479a8">
     <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=7007e129ba1dcf4c96892a88ce4b01d1">
     <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
@@ -59,7 +60,7 @@
                         <div class="shadow-sm">
                             <div class="card rounded-0 border-0 border-bottom">
                                 <div class="card-header">
-                                    <h5 class="mb-0"><a class="fw-bold" href="index.html">UX Component Library</a></h5>
+                                    <h5 class="mb-0"><a class="fw-bold d-block" href="index.html">Biblioteka komponentów UX</a><span class="text-uppercase fs-6 fw-normal d-block mt-1"><small>PORÓWNYWARKA CEN ENERGII</small></span></h5>
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text small">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
